Added Car New Fields

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -15,5 +15,16 @@
   <%= @car.model %>
 </p>
 
+<p>
+  <strong>Model:</strong>
+  <%= @car.price %>
+</p>
+
+<p>
+  <strong>Model:</strong>
+  <%= @car.stock %>
+</p>
+
+
 <%= link_to 'Edit', edit_car_path(@car) %> |
 <%= link_to 'Back', cars_path %>
