--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -9,6 +9,9 @@
       <th>Color</th>
       <th>Hp</th>
       <th>Model</th>
+      <th>Price</th>
+      <th>Stock</th>
+      <th>Total</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,6 +22,9 @@
         <td><%= car.color %></td>
         <td><%= car.hp %></td>
         <td><%= car.model %></td>
+        <td><%= car.price %></td>
+        <td><%= car.stock %></td>
+        <td><%= car.total_value %></td>
         <td><%= link_to 'Show', car %></td>
         <td><%= link_to 'Edit', edit_car_path(car) %></td>
         <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,5 +34,10 @@
 </table>
 
 <br>
+
+<p>
+  <strong>Most expensive car:</strong>
+  <%= @most_expensive_car.model%>
+</p>
 
 <%= link_to 'New Car', new_car_path %>
