Added user nickname and posts/comments submited period

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -15,7 +15,9 @@
         <td><%= link_to post.title, post %></td>
         <td><%= post.description %></td>
         <td><%= post.media %></td>
+        <td>submited <span><%= post.old %></span> ago</td>
       </tr>
+
   <% end %>
   </tbody>
 </table>
