--- a/app/views/comments/_comment.erb
+++ b/app/views/comments/_comment.erb
@@ -2,7 +2,8 @@
   <p>
     <%= comment.body %>
   </p>
-  <p>created by <strong><%= comment.email %></strong></p>
+  <p>created by <strong><%= comment.nickname %></strong></p>
+  <p>submited <span><%= comment.old %></span> ago</p>
   <a id="<%= comment.id %>" class="reply">Reply</a>
 
   <%= render partial: "comments/comment", collection: comment.child.child_comments%>
