--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -14,6 +14,7 @@
         <td><%= link_to post.title, post %></td>
         <td><%= post.description %></td>
         <td><%= post.media %></td>
+        <td>submited <span><%= post.old %></span> ago</td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
