--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+
+
 <h1>Listing Posts</h1>
 
 <table>
@@ -15,8 +17,11 @@
         <td><%= post.description %></td>
         <td><%= post.media %></td>
         <td>submited <span><%= post.old %></span> ago</td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to post.count_comments, post %></td>
+        <% if  user_signed_in? && @user_id == current_user.id %>
+            <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
   <% end %>
   </tbody>
