--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<%= form_tag("/", method: "get") do %>
+  <%= label_tag(:search, "Search for:") %>
+  <%= text_field_tag(:search) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
 <h1>Listing Posts</h1>
 
 <table>
