--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,10 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<%= form_tag("/", method: "get") do %>
+<%= form_tag("/#{@filter}", method: "get") do %>
   <%= label_tag(:search, "Search for:") %>
   <%= text_field_tag(:search) %>
   <%= submit_tag("Search") %>
 <% end %>
+
+<ul>
+  <li><%= link_to 'Hot', filter_path(:filter => :hot)%></li>
+  <li><%= link_to 'New', filter_path(:filter => :new)%></li>
+</ul>
 
 <h1>Listing Posts</h1>
 
