--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Follow', follow_path(:id => @user_id), method: :post %>
+<p>Karma: <span><%= @karma %></span></p>
+
+<% if user_signed_in? && @user_id != current_user.id %>
+  <%= link_to 'Follow', follow_path(:id => @user_id), method: :post %>
+<% end %>
 
 <h1>Listing Posts</h1>
 
