--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <ul>
+        <% @category.each do |category| %>
+            <li><%= link_to category.name, category_path(:category => category.slug) %></li>
+        <% end %>
+    </ul>
     <h1><%= link_to 'Home',  root_path  %></h1>
     <% if user_signed_in? %>
         <ul>
