--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :media %><br>
     <%= f.text_field :media %>
   </div>
+  <div class="field">
+    <%= f.label :category %><br>
+    <%= f.collection_select :category_id, @category[1..@category.count], :id, :name, include_blank: false %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
