--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 </head>
 <body>
     <ul>
-        <% @category.each do |category| %>
-            <li><%= link_to category.name, category_path(:category => category.slug) %></li>
+        <% @categories.each do |category| %>
+            <li><%= link_to category.name, category_filter_path(:category => category.slug) %></li>
         <% end %>
     </ul>
     <h1><%= link_to 'Home',  root_path  %></h1>
