--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,29 @@
-<h2>Change your password</h2>
+<div class="main-content">
+  <div class="new-post col-md-9">
+    <h2>Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+    <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.hidden_field :reset_password_token %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.submit "Change my password" %>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+<div class="col-md-3"> <!-- sidebar -->
+  <aside>
+    <h4 class="text-center">THEinternet</h4>
+    <%= form_tag root_path, method: "get", :class => "search-form" do %>
+        <div class="form-group">
+          <%= text_field_tag :search, nil, class: 'form-control', placeholder: 'search' %>
+        </div>
+    <% end %>
+    <%= bootstrap_form_for :user, :url => session_path(:user), :html => {:class => "login-form"} do |f| %>
+        <%= f.text_field :email%>
+        <%= f.password_field :password%>
+        <%= f.check_box :remember_me %>
+        <%= f.submit 'Sign in', class: 'btn btn-default pull-right' %>
+        <%= link_to "reset password", new_password_path(:user) %>
+    <% end %>
+  </aside>
+</div> <!-- end of sidebar -->
