--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,13 @@
-<%= render 'form' %>
+<div class="new-post col-md-9">
+  <div class="main-content">
+    <h1 class="page-title">Add new Post</h1>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<div class="col-md-3 col-md-offset-3"> <!-- sidebar -->
+<div class="col-md-3"> <!-- sidebar -->
   <aside>
-    <h4 class="text-center">THEInternet</h4>
+    <h4 class="text-center">THEinternet</h4>
     <%= form_tag("", method: "get") do %>
         <div class="form-group">
           <%= label_tag(:search, "Search for:") %>
