--- a/app/views/posts/_post_user.html.erb
+++ b/app/views/posts/_post_user.html.erb
@@ -1,9 +1,9 @@
 <li>
   <article class="row clearfix">
     <div class="vote pull-left">
-      <span <%= post_user.user_vote(@user) == 1 ? "vote_type = 1": "" %> class="glyphicon glyphicon-arrow-up vote-up" post-id=<%= post_user.id %>></span>
+      <span <%= post_user.user_vote(current_user) == 1 ? "vote_type = 1": "" %> class="glyphicon glyphicon-arrow-up vote-up" post-id=<%= post_user.id %>></span>
       <span class="vote-number"><%= post_user.rating %></span>
-      <span <%= post_user.user_vote(@user) == -1 ? "vote_type = -1" : "" %> class="glyphicon glyphicon-arrow-down vote-down" post-id=<%= post_user.id %>></span>
+      <span <%= post_user.user_vote(current_user) == -1 ? "vote_type = -1" : "" %> class="glyphicon glyphicon-arrow-down vote-down" post-id=<%= post_user.id %>></span>
     </div>
     <div class="col-md-1 article-img">
       <img src="<%= post_user.thumbnail %>" alt="post image">
