--- a/app/views/comments/_comment.erb
+++ b/app/views/comments/_comment.erb
@@ -4,7 +4,6 @@
       <div class="comm-info">
         <span class="username"><%= link_to comment.nickname, profile_path(:id => comment.reply_user_id) %></span>
         <p class="meta">
-          <span class="points">1 punct</span>
           <span class="time"><%= time_ago_in_words comment.created_at %></span>
         </p>
       </div>
@@ -14,7 +13,7 @@
       <button id="<%= comment.id %>" type="button" class="reply">reply</button>
     </div> <!-- end of media-body -->
     <ul class="list-unstyled">
-        <%= render partial: "comments/comment", collection: comment.child.child_comments %>
+        <%= render partial: "comments/comment", collection: comment.get_child_comments %>
     </ul>
   </div> <!-- end of media -->
 </li>
