--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -43,7 +43,7 @@
         <% end %>
 
     <%= link_to 'Submit New Content',  new_post_path, class: 'btn btn-primary btn-block'  %>
-    <h4 class="profile-usertitle-job">SUBSCRIPTIONS</h4>
+    <h4 class="profile-usertitle-job">FOLLOWING</h4>
     <ul class="list-unstyled">
       <% @followers.each do |follow| %>
           <li class="list-group-item">
